tests/compile_fail/fmt/value_not_impl_display_generic.stderr
error[E0277]: `T` doesn't implement `std::fmt::Display`
 --> tests/compile_fail/fmt/value_not_impl_display_generic.rs:6:18
  |
6 |         let _s = signal_format!("{}", value);
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be formatted with the default formatter
  |
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `signal_format` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
  |
4 |     fn f<T: std::fmt::Display>(value: T) {
  |           +++++++++++++++++++
